<resources>
    <string name="app_name">The Movie DB</string>
    <string name="empty_image">Empty Image</string>
    <string name="poster">Poster</string>
    <string name="popular">Popular Movie</string>
    <string name="detail">Detail</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="backdrop">Backdrop</string>
    <string name="favorite">Favorite</string>
    <string name="synopsis">Synopsis</string>
    <string name="play">Play</string>
    <string name="image">Image</string>
    <string name="cast">Cast</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="logo">Logo</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
</resources>