<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="id.sisco.themoviedb.module.profile.ProfileViewModel" />

        <variable
            name="click"
            type="id.sisco.themoviedb.module.profile.ProfileActivity.ClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".module.profile.ProfileActivity" >

        <include
            android:id="@+id/progressBar"
            layout="@layout/layout_progress_bar"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <include
                android:id="@+id/profile_toolbar"
                layout="@layout/toolbar_primary" />


            <ImageView
                android:id="@+id/photo"
                android:layout_width="@dimen/height_110dp"
                android:layout_height="@dimen/height_110dp"
                android:layout_marginStart="@dimen/content_margin_20dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/ic_baseline_person"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_toolbar"
                android:contentDescription="@string/image">

            </ImageView>

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{viewModel.detailUser.name}"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_large"
                android:layout_marginStart="@dimen/content_margin_high"
                android:layout_marginTop="@dimen/content_margin_high"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/photo"
                app:layout_constraintTop_toTopOf="@+id/photo">

            </TextView>

            <TextView
                android:id="@+id/edit_profil_btn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/content_margin_high"
                android:background="@color/colorPrimary"
                android:text="@string/edit_profile"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="@dimen/content_margin_high"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintBottom_toBottomOf="@+id/photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/photo"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <LinearLayout
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bg_white_round_top"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/content_margin_30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_marginTop="@dimen/content_margin_20dp"
                    android:layout_marginStart="@dimen/content_margin_20dp"
                    android:layout_marginEnd="@dimen/content_margin_20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.detailUser.email}"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/content_margin_medium"
                    android:layout_marginStart="@dimen/content_margin_20dp"
                    android:layout_marginEnd="@dimen/content_margin_20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_marginTop="@dimen/content_margin_high"
                    android:layout_marginStart="@dimen/content_margin_20dp"
                    android:layout_marginEnd="@dimen/content_margin_20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.detailUser.phone}"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/content_margin_medium"
                    android:layout_marginStart="@dimen/content_margin_20dp"
                    android:layout_marginEnd="@dimen/content_margin_20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_marginTop="@dimen/content_margin_high"
                    android:layout_marginStart="@dimen/content_margin_20dp"
                    android:layout_marginEnd="@dimen/content_margin_20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.detailUser.address}"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/content_margin_medium"
                    android:layout_marginStart="@dimen/content_margin_20dp"
                    android:layout_marginEnd="@dimen/content_margin_20dp"
                    />

            </LinearLayout>

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_margin_high"
                android:background="@drawable/bg_primary_round"
                android:padding="@dimen/content_margin_high"
                android:text="@string/logout"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:onClick="@{() -> click.logout()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:spinning_bar_color="@color/colorWhite"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>